# pong-allegro

./: CMakeLists.txt  README.md  game.c  game.h  main.c
